--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Logs
 logs
 *.log
@@ -138,11 +137,5 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-=======
-node_modules
-dist
-.vscode
-.env
-.DS_Store
 
->>>>>>> a19faff (FINAL COMMIT)
+venv
